# module_pf

./: CMakeLists.txt  README.md  basic_module_description.json  package.xml
include/module_pf/: ControlPanHead.hpp  PathManager.hpp  SSDetector.hpp  TrackedObject.hpp  Tracker.hpp  TrackerNode.hpp
launch/: bm.launch  open_doors_demo.launch
src/: Alexa2BM.py  BasicModule.py  ControlPanHead.cpp  PathManager.cpp  SSDetector.cpp  TrackedObject.cpp  Tracker.cpp  TrackerNode.cpp  panhead_node.cpp  path_manager_node.cpp  tracker_node.cpp
